# Goge-Chat

./: .gitattributes  .gitignore  LICENSE  README.md  alice_data.db  build_log.txt  check_gradio_api.py  check_log.txt  cleanup_duplicates.sql  debug_results.json  gradio_config.json  index.html  package-lock.json  package.json  search_debug.html  tts_traceback.txt  vite.config.js
.gemini/: network_optimization_summary.md
docs/: performance-optimization.md
live2d-standalone/: index.html  package-lock.json  package.json  vite.config.js
live2d-standalone/public/live2d/alice/: S.exp3.json  alice.physics3.json  alice.vtube.json  alice_model3.json  items_pinned_to_model.json  鼠标左键.exp3.json
live2d-standalone/src/: main.ts
live2d-standalone/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
live2d-standalone/src-tauri/capabilities/: default.json
public/lib/: cubism4.js  index.js
public/live2d/alice/: A.exp3.json  D.exp3.json  空格.exp3.json
public/live2d/alice/motions/: xunhuan.motion3.json
scripts/: download_model.py  inspect_db.py
src/: App.vue  main.js  main.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  build_errors.txt  build_output.txt  check_err.txt  check_result.txt  err_utf8.txt  tauri.conf.json  test_mod.rs  warnings.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/asr_model/: model.int8.onnx
src-tauri/resources/live2d/alice/: Ctrl键.exp3.json  W.exp3.json  alice.cdi3.json  鼠标右键.exp3.json
src-tauri/resources/live2d/hiyori/: hiyori_pro_t11.model3.json
src-tauri/src/: ai_utils.rs  behavior_engine.rs  behavior_scheduler.rs  character_state.rs  check_mod.rs  db.rs  immersive_settings.rs  lib.rs  main.rs  memory_commands.rs  models.rs  social_db.rs  test_exports.rs  test_help.rs  title_commands.rs
src-tauri/src/commands/: ai.rs  asr_cmd.rs  config_cmd.rs  db_cmd.rs  file_cmd.rs  immersive_cmd.rs  memory_cmd.rs  mod.rs  search.rs  tts_cmd.rs
src-tauri/src/memory/: db.rs  embed.rs  mod.rs  processor.rs
src-tauri/windows/: installer.nsh
src/api/: chat.ts
src/api/config/: index.ts  types.ts
src/assets/: main.css  markdown.css  reset.css  scrollbar.css  syntax-highlighting.css  variables.css
src/assets/css/: AI_CSS_MANIFESTO_READ_FIRST.md  catppuccin.css  clannad.css  cyberpunk.css  danganronpa.css  default-dark.css  eva-01.css  fate.css  frieren.css  ghibli.css  hollow-knight.css  index.css  light-default.css  midnight.css  miku-dark.css  miku.css  minimalist.css  nord.css  ocean.css  one-dark.css  rdr2.css  sakura.css  solarized-light.css  steins-gate.css  sts-defect.css  sts-ironclad.css  sts-silent.css  sts-watcher.css  terraria.css  twilight.css  violet.css  wa2.css  wechat.css  wukong.css
src/assets/icons/: index.ts
src/assets/prompts/: proactive_message.txt  prompts-list.ts  state_analysis.txt
src/assets/prompts/contents/: coding-expert.md  creative-writer.md  english-tutor.md  professional-assistant.md  prompts-creator.md  psychological-consultant.md
src/components/: SettingsModal.vue  SideBar.vue  TitleBar.vue
src/components/chat/: ChatContainer.vue  ChatInput.vue  MessageItem.vue  MessageList.vue  MinimalistOverlay.vue  ModelSelector.vue  ModernConfirm.vue  PresetSelector.vue  SearchSources.vue  SocialChatContainer.vue  SystemPromptBanner.vue  SystemPromptInput.vue  SystemPromptWidget.vue
src/components/chat/message-item/: AssistantBubble.vue  FileAttachment.vue  MessageActions.vue  MessageError.vue  MessageHeader.vue  ReasoningBlock.vue  UserBubble.vue
src/components/common/: ModelDownloadProgress.vue
src/components/layout/: AppNavBar.vue  SocialChatList.vue  SocialHistorySidebar.vue  SocialSidebar.vue
src/components/modals/: AIContactModal.vue  ImageCropperModal.vue  NamePresetModal.vue
src/components/settings/: AppearanceConfig.vue  ChatModeConfig.vue  DataConfig.vue  GeneralConfig.vue  ModelConfig.vue  PresetConfig.vue  PresetList.vue  ProfileConfig.vue  ProviderList.vue  SettingsModal.vue  SidebarNav.vue  SystemPromptConfig.vue
src/components/settings/components/: ModelConfig.vue
src/components/settings/models/: ModelAddModal.vue  ModelDiscoveryModal.vue  ModelGroup.vue  ModelRow.vue
src/components/sidebar/: HistoryItem.vue  HistoryList.vue  NewChatBtn.vue  SearchBar.vue  SideBar.vue  SideBarHeader.vue
src/components/sidebar/components/: HistoryItem.vue  SearchBar.vue
src/components/sidebar/layout/: HistoryList.vue  SideBar.vue  SideBarHeader.vue
src/components/social/: SocialContactProfile.vue
src/composables/: useFontLoader.ts  useProviderConfig.ts  useScrollRestore.ts  useSettings.ts  useSettingsValidation.ts
src/constants/: config.ts  icons.ts  index.ts  messages.ts  prompts.ts  routes.ts
src/layouts/: MainLayout.vue  StandardLayout.vue
src/services/: configService.ts  markdown.ts
src/stores/: chat.ts  config.ts  settings.ts  ui.ts
src/stores/chat/: folders.ts  messages.ts  sessions.ts  state.ts
src/tauri/: commands.ts  events.ts  index.ts
src/types/: chat.ts  config.ts  index.ts  tauri.ts
src/utils/: audioRecorder.ts  debounce.ts  format.ts  index.ts  logger.ts  pixi-url-patch.js  social.ts  storage.ts  url-shim.js  validator.ts
