[package]
name = "goge-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "goge_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 新增：用于发起 API 请求
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }  # ← 添加这一行
futures-util = "0.3" # 处理异步流必备
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2"
urlencoding = "2.1"
scraper = "0.19.0"
regex = "1"
base64 = "0.22.1"
tauri-plugin-fs = "2.4.5"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
tokio-util = "0.7"

# --- Alice Memory Engine Dependencies ---
lancedb = "0.15"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
arrow-array = "53"
arrow-schema = "53"
half = { version = "2.4", features = ["num-traits"] }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
sherpa-rs = "0.6.8"
once_cell = "1.21.3"

[profile.release]
opt-level = "z"     # 优化二进制大小
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化,但编译更慢
strip = true        # 移除调试符号
panic = "abort"     # 移除 panic 时的堆栈展开信息，显著减小体积
