[package]
name = "goge-live2d"
version = "0.0.1"
description = "Goge Live2D Standalone"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"     # 优化二进制大小
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化,但编译更慢
strip = true        # 移除调试符号
panic = "abort"     # 移除 panic 时的堆栈展开信息，显著减小体积
